<resources>
    <string name="app_name">CS223 Final</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="usage">Usage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_icon">Navigation Icon</string>
    <string name="user_name">John Viaud</string>
    <string name="user_email">jviaud@arcadia.edu</string>
    <string name="alerts_channel">Alerts</string>
    <string name="name">Name</string>
    <string name="calender_icon_for_dates">Calender icon for dates</string>
    <string name="one_or_more_field_is_missing">One or more field is missing</string>
    <string name="start_date">Start Date</string>
    <string name="subscription_length">Subscription Length</string>
    <string name="card_icon_for_memberships">Card icon for memberships</string>
    <string name="dollar_icon_for_cost">Dollar icon for cost</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="due_date">Due Date</string>
    <string name="hello_world">Hello World</string>
    <string name="service_icon">Service Icon</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="due">Due:</string>
    <string name="dollar_sign">$</string>
    <string name="cost">Cost</string>
    <string name="_10_01_1900">10/01/1900</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="renew">Renew</string>
    <string name="start">Start:</string>
    <string name="due_today">DUE TODAY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscription_icon">Subscription Icon</string>
    <string name="due_this_week">DUE THIS WEEK</string>
    <string name="nothing_is_due">Nothing to see here!</string>
    <string name="total">Total</string>
    <string name="categories">Categories</string>
    <string name="weekly_subscriptions">WEEKLY SERVICES</string>
    <string name="weekly_subscriptions_cost">Weekly Subscriptions Cost:</string>
    <string name="weekly_subscription_category">Weekly Subscription: Category</string>
</resources>
