<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/menu_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_subs"
            android:icon="@drawable/ic_nav_allsubs"
            android:title="@string/subscriptions" />

        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_nav_calender"
            android:title="@string/calender" />


    </group>


</menu>