<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:background="@drawable/gradient_1"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/nav_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/navigation_icon"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:paddingTop="8dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textcolor"
        app:layout_constraintStart_toEndOf="@+id/nav_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/user_email"
        android:textColor="?attr/textcolor"
        app:layout_constraintStart_toEndOf="@+id/nav_icon"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_name" />


</androidx.constraintlayout.widget.ConstraintLayout>