<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newSub_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/toolbarcolor"
        android:elevation="4dp"
        android:theme="@style/Theme.backToCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="New Subscription"
        app:titleTextColor="?attr/textcolor"></androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/service_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:textColor="?attr/devidercolor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_card"
        app:layout_constraintTop_toBottomOf="@+id/error_info" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?attr/devidercolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_date" />

    <ImageView
        android:id="@+id/img_calender"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/calender_icon_for_dates"
        android:src="@drawable/img_calender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


    <TextView
        android:id="@+id/error_info"
        android:layout_width="408dp"
        android:layout_height="24dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#00756C6C"
        android:backgroundTint="#00BBB5B5"
        android:elevation="8dp"
        android:gravity="center"
        android:text="@string/one_or_more_field_is_missing"
        android:textColor="#BD1818"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSub_toolbar" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/start_date"
        android:textColor="?attr/devidercolor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_calender"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/subscription_amount_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/subscription_length"
        android:textColor="?attr/buttoncolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_calender"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />

    <Spinner
        android:id="@+id/subscription_amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:imeOptions="actionDone"
        android:scrollbarSize="20dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_calender"
        app:layout_constraintTop_toBottomOf="@+id/subscription_amount_title" />

    <TextView
        android:id="@+id/due_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/due_date"
        android:textColor="?attr/devidercolor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_calender"
        app:layout_constraintTop_toBottomOf="@+id/subscription_amount" />

    <ImageView
        android:id="@+id/img_card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/card_icon_for_memberships"
        android:src="@drawable/img_membership"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_info" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?attr/devidercolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_cost" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="56dp"
        android:background="?attr/devidercolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_name" />

    <EditText
        android:id="@+id/edit_cost"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textColor="?attr/devidercolor"
        android:textSize="30sp"
        app:backgroundTint="?attr/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_dollar"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ImageView
        android:id="@+id/img_dollar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dollar_icon_for_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/img_money" />

    <TextView
        android:id="@+id/service_category"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:hint="@string/category"
        android:textColor="?attr/devidercolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_card"
        app:layout_constraintTop_toBottomOf="@+id/service_name" />

</androidx.constraintlayout.widget.ConstraintLayout>