<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:background="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/cal_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/subscription_icon"
        android:elevation="5dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_calender"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        app:cardBackgroundColor="?attr/cardbackground"
        app:cardCornerRadius="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_2">

            <TextView
                android:id="@+id/cal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:text="@string/hello_world"
                android:textColor="?attr/textcolor"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cal_due_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="4dp"
                android:text="@string/due"
                android:textColor="?attr/textcolor"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/cal_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="4dp"
                android:text="@string/hello_world"
                android:textColor="?attr/textcolor"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cal_due_title" />

            <TextView
                android:id="@+id/cal_dollarsign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="264dp"
                android:layout_marginTop="12dp"
                android:text="@string/dollar_sign"
                android:textColor="?attr/textcolor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cal_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:text="@string/hello_world"
                android:textColor="?attr/textcolor"
                app:layout_constraintStart_toEndOf="@+id/cal_dollarsign"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cal_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="9dp"
                android:text="@string/hello_world"
                android:textColor="?attr/textcolor"
                app:layout_constraintBottom_toTopOf="@+id/cal_due_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cal_name"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
