<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_overlay"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:clickable="true"
    android:contextClickable="true"
    android:focusable="true"
    android:onClick="clicked"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:clickable="false"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/popup_window"
        android:layout_width="350dp"
        android:layout_height="275dp"
        android:layout_gravity="center"
        android:clickable="false"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:contentDescription="@string/subscription_icon"
            android:elevation="4dp"
            android:focusable="true"
            android:transitionName="icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#3c4043"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_1">

                <ImageView
                    android:id="@+id/btn_close"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="3dp"
                    android:contentDescription="@string/subscription_icon"
                    app:layout_constraintCircleRadius="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tool_cancel" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/hello_world"
                    android:textColor="#A29E9E"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hello_world"
                    android:textColor="#A29E9E"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/due_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/due"
                    android:textColor="#A29E9E"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.268"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category" />

                <TextView
                    android:id="@+id/due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/hello_world"
                    android:textColor="#A29E9E"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/due_tittle"
                    app:layout_constraintTop_toBottomOf="@+id/category" />

                <TextView
                    android:id="@+id/dollar_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/dollar_sign"
                    android:textColor="#A29E9E"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cost" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/hello_world"
                    android:textColor="#A29E9E"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>